# Generative-AI-Engineering

./: .gitignore  LICENSE  README.md  main.py  omni_enterprise.db  pyproject.toml
Foundation_Project/: Engineering_with_Tokens.ipynb  Project1_Sales_Brochure_Generator.ipynb  Universal_Chat_Protocol.ipynb  concept_multi_provider.ipynb  concept_offline_ollama.ipynb  web_scraper.ipynb  web_scraper.py
Giving the AI Hands – Function Calling & Agentic Workflows/: agentic_paradigm.ipynb  autonomous_agent_loops.ipynb  enterprise_inventory.db  sql_agent.ipynb  tool_calling_anatomy.ipynb
The Frontier Arena: Multi-Model Architectures & Advanced Reasoning/: abstraction_layers.ipynb  local_decentralized_ai.ipynb  model_arena.ipynb  reasoning_models.ipynb  universal_connectors.ipynb
The Interface Layer: Rapid Prototyping & AI User Experiences/: document_chunking.ipynb  final_rag_pipeline.ipynb  gradio_interfaces.ipynb  interactive_components.ipynb  multimodel_dashboard.ipynb  securing_the_engine.ipynb  streaming_ux.ipynb  text_embeddings.ipynb
foundation-project/: concept_multi_provider.ipynb  concept_offline_ollama.ipynb  experiment.ipynb  main.py  project1.ipynb  pyproject.toml  web_scraper.py
