[project]
name = "generative-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-openai>=1.1.12",
    "litellm>=1.83.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
    "typing>=3.10.0.0",
]
